[gd_scene load_steps=3 format=2]

[ext_resource path="res://entity/fx/blood_hit.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
flatness = 0.23
gravity = Vector3( 0, 1000, 0 )
initial_velocity = 222.72
initial_velocity_random = 0.72
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color = Color( 0.745098, 0.101961, 0.0901961, 1 )

[node name="blood_hit" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 100
lifetime = 0.5
local_coords = false
process_material = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer_death" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_death" to="." method="_on_Timer_death_timeout"]
